--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,12 @@
     "name": "cryot/prestashop-module-form-generator",
     "autoload": {
         "psr-4": {
-            "Cryot\\PrestashopModuleFormGenerator\\": "src/"
-        }
+          "Module\\DemoDoctrine\\": "src/"
+        },
+        "config": {
+          "prepend-autoloader": false
+        },
+        "type": "prestashop-module"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.0"
